# mysite

ProgressBar/: readme.md
ProgressBar/include/: header1.h  header2.h
ProgressBar/single_include/: template_header.h
ProgressBar/src/core/: header1.cpp
ProgressBar/src/execute/: CMakeLists.txt  main2.cpp
SE06/: header.h  main.cpp
SE06/thread_bar_exception/: CMakeLists.txt  header.h  main.cpp
asm_tempate/: note.txt
asm_tempate/a_project/: Makefile  cpuid_example  main.c
asm_tempate/b_project/: Makefile  main  main.c
asm_tempate/c_project/: Makefile  main.c  readme.md  vector_add  vector_add.c
asm_tempate/d_project/: Makefile  main  main.c  main.txt  main_o.txt  readme.md
asm_tempate/e_project/: asm_action.s  main  main.c  main.txt  main_o.txt  readme.md
asm_tempate/f_project/: Makefile  asm_action.s  main  main.py  readme.md
asm_tempate/g_project/: main.py
asm_tempate/g_project/payloads/asm/: linux_64__bind_tcp.s
asm_tempate/g_project/src/: _paths.py  _payloads.py
asm_tempate/g_project/src/c_test/: Makefile  main  main.c
asm_tempate/my_project/: Makefile  add.asm  main  main.c  program
asm_tempate/z_project/: main.py  payload.txt
cmake_template/: CMakeLists.txt
cmake_template/src/core/: CMakeLists.txt
cmake_template/src/execute/: main1.cpp
cmake_template/src/test/: test.cpp  test2.cpp
curl_test/: CMakeLists.txt  main.cpp
glucus/: Makefile  main.py  setup.py  shellcode.py
glucus/dependencies/: Readme.md
glucus/glucus/shellcode/: shellcode.py
glucus/glucus/shellcode/c_workspace/: DLLIntegration.py  Makefile  main.cpp
glucus/glucus/shellcode/c_workspace/libs/: main.exp  main.lib
httpClient/cmake_template/: CMakeLists.txt  readme.md
httpClient/cmake_template/single_include/: template_header.h
httpClient/cmake_template/src/core/: CMakeLists.txt  CommandHandler.cpp  CommandHandler.h  CurlData.cpp  CurlData.h  CurlHandler.cpp  CurlHandler.h  header2.cpp
httpClient/cmake_template/src/execute/: CMakeLists.txt  main_SE07_V1.cpp  main_SE07_V2.cpp  main_SE07_V3.cpp  main_genfile.cpp  main_test.cpp
httpClient/cmake_template/src/test/: CMakeLists.txt  test1.cpp
httpServer/: Readme.md  main_check_os.py  main_http.py  main_http_head.py
indicator_test/: CMakeLists.txt  main.cpp
server/: genfile.py  multiHandle.py
system/client/: CMakeLists.txt
system/client/include/: global.h
system/client/include/3-parties/: custom_filesystem.h  custom_node.h  custom_user.h  example_module.h
system/client/include/core/: example_template.h
system/client/src/core/: CMakeLists.txt  example_template.cpp
system/client/src/execute/: CMakeLists.txt  example_main.cpp  example_main_node.cpp  example_main_user.cpp
system/client/src/test/: test_example_module.cpp
system/client/vscode/: c_cpp_properties.json  launch.json  settings.json  tasks.json
system/server/src/: SE10_crypto.py  SE10_dbms.py  SE10_handler.py  SE10_server.py  SE10_socketserver.py  readme
system/server/storage/: test.db
system/server/storage/Node1/: user1  user1_file1.txt  user1_your_file_name
system/storage_nodes/node1/: user1_file_upload.txt
system/storage_users/user2/: file1.txt
system/test/: Makefile  decrypted.txt  encrypt_decrypt
system/vscode/: c_cpp_properties.json  launch.json  tasks.json
template/include/: global.h
template/include/3-parties/: custom_aes.h  custom_getopt.h
template/src/execute/: example_getopt.cpp  example_main.cpp
template/src/test/: CMakeLists.txt  test.cpp
template/test/: congesion_minimization.ipynb  encrypt_decrypt.cpp
thread_test/: CMakeLists.txt  main.cpp  main_test.cpp
trash/: Makefile  README.md  setup.py
trash/libs/: __init__.py  _global.py  check.py  path.py
trash/template/dooo/: __init__.py
trash/template/dooo/src/: dooo.py
trash/template/dooo/src/core/: win_analysis.py
trash/template/glucus/: __init__.py
